--- a/Mission6Ass/appsettings.json
+++ b/Mission6Ass/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FormConnection": "Data Source = MovieForm.sqlite"
+    "FormConnection": "Data Source = JoelHiltonMovieCollection.sqlite"
   }
           
 }
